--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "chart.js": "^4.3.3",
+    "express": "^4.18.2",
+    "express-form-data": "^2.0.22",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "sequelize": "^6.34.0",
+    "sqlite3": "^5.1.6",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
