--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-search-autocomplete": "^8.5.2",
     "sequelize": "^6.34.0",
     "sqlite3": "^5.1.6",
     "swagger-ui-express": "^5.0.0"
